--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,7 +6,71 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 5,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 5,
+"selection_to_column": 30,
+"selection_to_line": 6,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/ObjectiveArea.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 62,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/Plane.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 9,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 12,
+"selection_to_column": 9,
+"selection_to_line": 12,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/ObjectiveNewArea.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 62,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/StoneObstacle.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
